[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-monitor"
version = "0.1.0"
description = "Monitor GitHub Copilot coding agent work from the terminal"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
agent-monitor = "agent_monitor.cli:main"
